--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
